fix(atom/tag): fix tag alignment

--- a/components/atom/tag/src/index.scss
+++ b/components/atom/tag/src/index.scss
@@ -4,11 +4,9 @@
 
 @mixin icon-atom-tag($type) {
   @include sui-icon--small;
-  align-content: center;
-  align-items: center;
-  display: inline-flex;
-  justify-content: center;
+  display: inline-block;
   line-height: initial;
+  vertical-align: middle;
 
   @if $type == 'icon' {
     margin: 0 $m-s 0 (-$m-m);
@@ -30,13 +28,16 @@
 
 .sui-AtomTag {
   $self: &;
+  align-items: center;
+  align-content: center;
   background-color: $bgc-atom-tag;
   border: $bd-atom-tag;
   border-radius: ceil($h-atom-tag-m / 2);
   box-sizing: border-box;
-  display: inline-block;
+  display: inline-flex;
   font-size: $fz-s;
   height: $h-atom-tag-m;
+  justify-content: center;
   margin: 0 $m-atom-tag $m-atom-tag 0;
   padding: $p-atom-tag-m;
   position: relative;
